--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -14,6 +14,13 @@
     <name>Server</name>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <!-- Partie commune du code -->
         <dependency>
             <groupId>fr.butinfoalt.riseandfall</groupId>
             <artifactId>common</artifactId>
